<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/art_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/art_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:maxWidth="420dp"
            android:maxLines="2"
            android:text="@string/title_placeholder"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/art_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxWidth="100dp"
            android:text="@string/author_placeholder2"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/art_title"
            app:layout_constraintTop_toBottomOf="@+id/art_title" />

        <TextView
            android:id="@+id/art_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel_collected"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/art_author"
            app:layout_constraintTop_toTopOf="@+id/art_author" />

        <TextView
            android:id="@+id/art_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_placeholder"
            app:layout_constraintEnd_toEndOf="@+id/art_title"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toEndOf="@+id/art_collect"
            app:layout_constraintTop_toTopOf="@+id/art_author" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>