<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minWidth="375dp"
        android:orientation="vertical"
        tools:minHeight="450dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/top_radious_light_black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_web"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                style="@style/TextInputEditRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="387dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_title"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="387dp"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="95dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                style="@style/TextInputEditRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="387dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_author"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="387dp"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="182dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout9"
                style="@style/TextInputEditRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
                tools:layout_conversion_absoluteHeight="61dp"
                tools:layout_conversion_absoluteWidth="387dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_link"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="387dp"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="268dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/add_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:gravity="right"
                android:textColor="#FF0000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="397dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_warning">

                <Button
                    android:id="@+id/add_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_white"
                    android:text="@android:string/cancel"
                    android:textColor="@color/light_grey"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="186dp" />

                <Button
                    android:id="@+id/add_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_black"
                    android:text="@string/confirm"
                    android:textColor="@color/deep_white2"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="186dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>